[gd_scene load_steps=4 format=2]

[ext_resource path="res://ConnectNode.gd" type="Script" id=1]
[ext_resource path="res://Stations/TimerClickMinigame/Assets/LittleHex.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 26.5909

[node name="ConnectNode" type="Area2D"]
script = ExtResource( 1 )

[node name="LittleHex" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
[connection signal="mouse_entered" from="." to="." method="_on_ConnectNode_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ConnectNode_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
